[gd_scene load_steps=4 format=3 uid="uid://cybb46stuffbp"]

[ext_resource type="Script" path="res://entities/unit/unit.gd" id="1_k8skl"]
[ext_resource type="Texture2D" uid="uid://uw1gg7rmh15v" path="res://assets/player.png" id="2_3oflm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s1ieu"]
size = Vector2(17, 24)

[node name="Unit" type="CharacterBody2D"]
position = Vector2(222, 159)
input_pickable = true
script = ExtResource("1_k8skl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_s1ieu")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 1.0
target_desired_distance = 1.0
path_postprocessing = 1
simplify_path = true
avoidance_enabled = true
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(1, 0, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -9)
texture = ExtResource("2_3oflm")

[connection signal="death" from="." to="." method="_on_death"]
[connection signal="hit" from="." to="." method="_on_hit"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
